--- a/src/Assets/Styles/global.css
+++ b/src/Assets/Styles/global.css
@@ -93,3 +93,10 @@ button:hover{
         display: none;
     }
 }
+
+/*RESPONSIVE*/
+@media screen and (max-width: 251px) {
+    body{
+        display: none;
+    }
+}
