--- a/src/Admin_Pages/Vaccine_Page/Vaccine.css
+++ b/src/Admin_Pages/Vaccine_Page/Vaccine.css
@@ -802,11 +802,15 @@ body{
     width: 100%;
     border: 2px solid transparent;
     height: 45px;
+    display: flex;
+    justify-content: flex-end;
+}
+.add_vaccine_container .button button:nth-child(1){
+    margin-right: 20px;
 }
 .add_vaccine_container .button button{
     height: 40px;
     width: 150px;
-    float: right;
     background-color: #4D77FF;
     border: none;
     color: #ffff;
@@ -814,6 +818,9 @@ body{
     font-weight: 700;
     border-radius: 5px;
     transition: .3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .add_vaccine_container .button button:hover{
     opacity: 90%;
