--- a/src/Landing_Pages/Navigation_Bar/NavigationBar.css
+++ b/src/Landing_Pages/Navigation_Bar/NavigationBar.css
@@ -34,6 +34,7 @@ nav .center span{
     color: #121212;
 }
 nav .center span:hover, nav .right span:hover{
+    cursor: pointer;
     text-decoration: underline;
     color: #444444;
 }
@@ -66,6 +67,7 @@ nav .right .signup_btn{
 }
 nav .right .signup_btn:hover{
     opacity: 70%;
+    cursor: pointer;
 }
 nav .right img{
     display: none;
