--- a/src/Landing_Pages/LoginRegister_Pages/LoginRegister.css
+++ b/src/Landing_Pages/LoginRegister_Pages/LoginRegister.css
@@ -130,6 +130,7 @@
     background-color: #dfe7fb;
     outline-color: #4D77FF;
     text-indent: 10px;
+    font-weight: 600;
 }
 
 .LoginForm_Container .right .password_input_container{
@@ -146,6 +147,7 @@
     width: 85%;
     border: none;
     font-size: 1rem;
+    font-weight: 600;
     padding: 10px 0;
     background-color: transparent;
     outline: none;
@@ -200,12 +202,13 @@
     cursor: pointer;
 }
 .LoginForm_Container .right .signIn_btn{
-    margin-top: 20px;
+    margin-top: 15px;
     width: 100%;
     border: 2px solid transparent;
 }
 .LoginForm_Container .right .signIn_btn button{
     width: 100%;
+    height: 40px;
     font-size: 1rem;
     font-weight: 600;
     padding: 9px 0;
@@ -213,6 +216,9 @@
     border: none;
     color: #ffff;
     border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .LoginForm_Container .right .signIn_btn button:hover{
     opacity: 90%;
@@ -259,6 +265,7 @@
     border: 2px solid transparent;
     border-radius: 8px;
     font-size: 1rem;
+    font-weight: 600;
     padding: 10px 0;
     background-color: #dfe7fb;
     outline-color: #4D77FF;
@@ -278,6 +285,7 @@
     width: 85%;
     border: none;
     font-size: 1rem;
+    font-weight: 600;
     padding: 10px 0;
     background-color: transparent;
     outline: none;
@@ -379,6 +387,14 @@
     color: rgb(251, 28, 28);
     font-weight: 500;
 }
+.login_validation #validation_text1{
+    font-size: .9rem;
+    margin: 0;
+    margin-right: 15px;
+    color: rgb(251, 28, 28);
+    font-weight: 500;
+}
+
 
 
 /*Register*/
@@ -451,12 +467,61 @@
     outline: none;
     text-indent: 10px;
 }
+#RegisterForm_Container .right h2{
+    text-align: center;
+    margin-top: 5vh;
+}
+#RegisterForm_Container .right #step2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#RegisterForm_Container .right #step2 p{
+    text-align: center;
+    margin: 0;
+    margin-top: 15px;
+    font-size: .9rem;
+}
+#RegisterForm_Container .right #step2 input{
+    margin-top: 2rem;
+    width:  80%;
+    border: 2px solid transparent;
+    border-radius: 8px;
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 10px 0;
+    background-color: #dfe7fb;
+    outline-color: #4D77FF;
+    text-indent: 10px;
+}
+#RegisterForm_Container .right #step2 .signIn_btn{
+    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+#RegisterForm_Container .right #step2 .signIn_btn button:nth-child(1){
+    padding: 0;
+    height: 35px;
+    width: 130px;
+    font-size: .9rem;
+}
+#RegisterForm_Container .right #step2 .signIn_btn button:nth-child(2){
+    padding: 0;
+    height: 35px;
+    width: 130px;
+    font-size: .9rem;
+}
+
 
 /*RESPONSIVE*/
 @media screen and (max-width: 851px) {
     .LoginForm_Container{
         width: 600px;
         margin: 0 5%;
+        height: auto;
+        padding-bottom: 20px;
     }
     .LoginForm_Container > .left{
        display: none;
